Google custom search style added, resolved some spacing issues.

--- a/rtpanel_sass/_input-types.scss
+++ b/rtpanel_sass/_input-types.scss
@@ -151,7 +151,10 @@ $all-button-inputs-active: $unquoted-button-inputs-active-list;
     font-size: $base-font-size - 1;
     margin: 0;
     padding: 5px;
+    width: 72%;
 }
+
+input.email { width: 64%; }
 
 select {
     padding: 0;
